# conversational_bi

./: .gitignore  GITHUB_PAGES.md  Makefile  README-instructions.md  README.md  pyproject.toml  start_stdio.py  start_stdio.sh
.github/ISSUE_TEMPLATE/: bug_report.yaml  docs_website_change.yaml  generic_issue.yaml  question.yaml  use_case.yaml
data/: ontology_ddl.sql  retail_analytics.ddl
data/TLK/: TLK_Library.json
data/ontology/: ontology_metrics.json  ontology_product.json  ontology_product_final.json  ontology_synonyms.json  synonyms.json
data/parquets/: cecos.parquet  inventory_stock_inv1.parquet  master_articles_oitm.parquet  master_inventory_log_oinm.parquet  master_stock_oitw.parquet  master_warehouses_owhs.parquet  sales_credit_notes_rin1.parquet
docs/: _config.yml  about.markdown  altogether.markdown  architecture.md  contributing.markdown  current_state.markdown  documentation.html  essay_post.html  future_state.markdown  index.markdown  index.md  ontology.md  technical_post.html  workflow.html
docs/_includes/: header_buttons_custom.html
src/: .env.example  COMMIT_INSTRUCTIONS.txt  Dockerfile  README.md  pyproject.toml
src/retail_electronics/: __main__.py  config.py  server.py
src/retail_electronics/llm/: client.py
src/retail_electronics/ontology/: index.py  search3.py
src/retail_electronics/tools/classify/: classify.py
src/retail_electronics/tools/display/: display.py
src/retail_electronics/tools/execute/: execute.py
src/retail_electronics/tools/lookup/: date_guards.py  tlk.py
src/sql/: pyproject.toml  server.py
(+6 files in other folders)
